<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorAppBackground"
    android:weightSum="6.1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screenInput"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_weight="0.4"
        android:gravity="bottom|end"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="?attr/colorBtnNumbersText"
        android:background="?attr/colorBtnBackground"
        android:textAlignment="textEnd"
        android:maxLines="6"
        android:padding="9dp"/>
    <TextView
        android:id="@+id/screenOutput"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_weight="0.7"
        android:gravity="center|end"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="?attr/colorBtnNumbersText"
        android:background="?attr/colorBtnBackground"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:padding="9dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick" />
        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/subtraction"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/subtraction"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/addition"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <ToggleButton
            android:id="@+id/colorToggle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:textColor="?attr/colorBtnNumbersText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textColor="?attr/colorBtnOperatorsText"
            android:background="@drawable/btn_click_effect"
            android:onClick="buttonClick"/>
    </LinearLayout>

</LinearLayout>